--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
     "expo-constants": "~9.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
