--- a/app.json
+++ b/app.json
@@ -1,12 +1,8 @@
 {
   "expo": {
-    "name": "color-quiz",
+    "name": "Color Quiz",
     "slug": "color-quiz",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,11 +14,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.rapdev.colorquiz",
+      "versionCode": 1
     }
   }
 }
